// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`dashboard golden frames renders many-projects at 80x24 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
       SESSION                            AGENT     STATUS            DIFF · PR 
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle           #73 merged ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-overlay                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  3 sessions · 2 agents                                  [sh] [qs] [▾] 
 [9] ○ api-cache                          opencode  idle           +14 -6 #5 x1 
 [a] ? metadata-refresh                   opencode  unknown           +3 -1 #10 
 [b] - old-experiment                     -         no agent                    
                                                                                
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`dashboard golden frames renders many-projects at 120x40 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle     4 projects · 11 sessions · 9 agents 
                                                                                                                        
       SESSION                                   AGENT     STATUS                                             DIFF · PR 
                                                                                                                        
▼ station  5 sessions · 4 agents                                                            [shell] [quick session] [▾] 
 [1] ○ cli-help-man                              codex     idle                                            +14 -6 #70 ✓ 
 [2] - docs-cleanup                              -         no agent                                                     
 [3] ○ pty-buffer                                codex     idle                                            #73 merged ✓ 
 [4] + session-resume                            codex     starting                                                     
 [5] ⠋ station-overlay                           codex     working                                       +412 -96 #76 … 
                                                                                                                        
▼ observer  3 sessions · 3 agents                                                           [shell] [quick session] [▾] 
 [6] x batch-export                              opencode  exited                                                  #8 ✓ 
 [7] ⠋ provider-hooks                            opencode  working                                         +32 -8 #16 … 
 [8] ○ trace-bundle                              opencode  idle                                              +1 -1 #4 ✓ 
                                                                                                                        
▼ scripts  3 sessions · 2 agents                                                            [shell] [quick session] [▾] 
 [9] ○ api-cache                                 opencode  idle                                            +14 -6 #5 x1 
 [a] ? metadata-refresh                          opencode  unknown                                            +3 -1 #10 
 [b] - old-experiment                            -         no agent                                                     
                                                                                                                        
▼ empty-project  0 sessions                                                                 [shell] [quick session] [▾] 
 no sessions yet · [ + add session ]                                                                                    
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close                                          
"
`;

exports[`dashboard golden frames renders many-projects at 60x16 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown   
                                                            
       SESSION          AGENT     STATUS                 PR 
                                                            
▼ station  5 sessions · 4 agents              [sh] [qs] [▾] 
 [1] ○ cli-help-man     codex     idle                #70 ✓ 
 [2] - docs-cleanup     -         no agent                  
 [3] ○ pty-buffer       codex     idle         #73 merged ✓ 
 [4] + session-resume   codex     starting                  
 [5] ⠋ station-overlay  codex     working             #76 … 
                                                            
▼ observer  3 sessions · 3 agents             [sh] [qs] [▾] 
 [6] x batch-export     opencode  exited               #8 ✓ 
▼ 5 below · showing 6 of 11                                 
─────────────────────────────────────────────────────────── 
↵ open  N new  ⇥ next  / search  X delete  ? help  Q/esc:c… 
"
`;

exports[`dashboard golden frames renders many-projects at 40x12 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0      
                                        
       SESSION             STATUS       
                                        
▼ station  5 sessions · … [sh] [qs] [▾] 
 [1] ○ cli-help-man        idle         
 [2] - docs-cleanup        no agent     
 [3] ○ pty-buffer          idle         
 [4] + session-resume      starting     
▼ 7 below · showing 4 of 11             
─────────────────────────────────────── 
↵ open  N new  ⇥ next  / search  X del… 
"
`;

exports[`dashboard golden frames renders attention-and-failures at 80x24 1`] = `
"FLEET  ● 0 ready  ⠋ 1 working  ! 3 needs you  ? 1 unknown  x 1 exited  ○ 0 idle 
                                                                                
       SESSION                        AGENT     STATUS                DIFF · PR 
                                                                                
▼ station  4 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ! hook-scope                     codex     Agent needs appro… +8 -2 #12 x2 
 [2] ? metadata-refresh               codex     unknown                   +3 -1 
 [3] ! popup-latency                  codex     No progress was… +120 -44 #13 … 
 [4] ⠋ pr-info                        codex     working                   #11 ✓ 
                                                                                
▼ observer  2 sessions · 2 agents                                 [sh] [qs] [▾] 
 [5] x done-run                       opencode  exited                          
 [6] ! sqlite-cleanup                 opencode  Agent needs appro… +19 -2 #6 x1 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`dashboard golden frames renders attention-and-failures at 120x40 1`] = `
"FLEET  ● 0 ready  ⠋ 1 working  ! 3 needs you  ? 1 unknown  x 1 exited  ○ 0 idle      2 projects · 6 sessions · 6 agents 
                                                                                                                        
       SESSION                                   AGENT     STATUS                                             DIFF · PR 
                                                                                                                        
▼ station  4 sessions · 4 agents                                                            [shell] [quick session] [▾] 
 [1] ! hook-scope                                codex     Agent needs approval.                           +8 -2 #12 x2 
 [2] ? metadata-refresh                          codex     unknown                                                +3 -1 
 [3] ! popup-latency                             codex     No progress was observed recently.            +120 -44 #13 … 
 [4] ⠋ pr-info                                   codex     working                                                #11 ✓ 
                                                                                                                        
▼ observer  2 sessions · 2 agents                                                           [shell] [quick session] [▾] 
 [5] x done-run                                  opencode  exited                                                       
 [6] ! sqlite-cleanup                            opencode  Agent needs approval.                           +19 -2 #6 x1 
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close                                          
"
`;

exports[`dashboard golden frames renders attention-and-failures at 60x16 1`] = `
"FLEET  ● 0 ready  ⠋ 1 working  ! 3 needs you  ? 1 unknown   
                                                            
       SESSION            AGENT     STATUS               PR 
                                                            
▼ station  4 sessions · 4 agents              [sh] [qs] [▾] 
 [1] ! hook-scope         codex     Agent needs app… #12 x2 
 [2] ? metadata-refresh   codex     unknown                 
 [3] ! popup-latency      codex     No progress was … #13 … 
 [4] ⠋ pr-info            codex     working           #11 ✓ 
                                                            
▼ observer  2 sessions · 2 agents             [sh] [qs] [▾] 
 [5] x done-run           opencode  exited                  
 [6] ! sqlite-cleanup     opencode  Agent needs appr… #6 x1 
                                                            
─────────────────────────────────────────────────────────── 
↵ open  N new  ⇥ next  / search  X delete  ? help  Q/esc:c… 
"
`;

exports[`dashboard golden frames renders attention-and-failures at 40x12 1`] = `
"FLEET  ● 0 ready  ⠋ 1 working  ! 3      
                                        
       SESSION                          
                                        
▼ station  4 sessions · … [sh] [qs] [▾] 
 [1] ! hook-scope                       
 [2] ? metadata-refresh                 
 [3] ! popup-latency                    
 [4] ⠋ pr-info                          
▼ 2 below · showing 4 of 6              
─────────────────────────────────────── 
↵ open  N new  ⇥ next  / search  X del… 
"
`;

exports[`dashboard golden frames renders no-projects at 80x24 1`] = `
"                                                                                
                                                                                
No projects configured yet.                                                     
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
A add project  Q/esc:close                                                      
"
`;

exports[`dashboard golden frames renders no-projects at 120x40 1`] = `
"                                                                                                                        
                                                                                                                        
No projects configured yet.                                                                                             
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
A add project  Q/esc:close                                                                                              
"
`;

exports[`dashboard golden frames renders no-projects at 60x16 1`] = `
"                                                            
                                                            
No projects configured yet.                                 
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
─────────────────────────────────────────────────────────── 
A add project  Q/esc:close                                  
"
`;

exports[`dashboard golden frames renders no-projects at 40x12 1`] = `
"                                        
                                        
No projects configured yet.             
                                        
                                        
                                        
                                        
                                        
                                        
                                        
─────────────────────────────────────── 
A add project  Q/esc:close              
"
`;
